# ChangeLog for dev-python/configobj
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.50 2014/04/23 08:37:56 idella4 Exp $

  23 Apr 2014; Ian Delaney <idella4@gentoo.org> configobj-5.0.4.ebuild:
  deal with un-needed _version.py reported by Arfrever

*configobj-5.0.4 (12 Apr 2014)

  12 Apr 2014; Tim Harder <radhermit@gentoo.org> +configobj-5.0.4.ebuild:
  Version bump.

*configobj-5.0.3 (08 Apr 2014)

  08 Apr 2014; Ian Delaney <idella4@gentoo.org> +configobj-5.0.3.ebuild:
  bump

  07 Apr 2014; Ian Delaney <idella4@gentoo.org> -configobj-4.7.2.ebuild,
  configobj-5.0.1.ebuild, configobj-5.0.2.ebuild:
  Add py3.4 support & missing rdep, fixes Bug 505964 by Dimas

  03 Apr 2014; Tim Harder <radhermit@gentoo.org> configobj-5.0.2.ebuild:
  Add python3_4 support.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> configobj-4.7.2-r1.ebuild,
  configobj-4.7.2-r2.ebuild, configobj-5.0.1.ebuild, configobj-5.0.2.ebuild:
  Add support for the new PyPy slotting.

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> configobj-4.7.2-r2.ebuild:
  Stable for sparc, wrt bug #495582

*configobj-5.0.2 (11 Mar 2014)

  11 Mar 2014; Tim Harder <radhermit@gentoo.org> +configobj-5.0.2.ebuild:
  Version bump.

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> configobj-4.7.2-r2.ebuild:
  Stable for ppc64, wrt bug #495582

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> configobj-4.7.2-r2.ebuild:
  Stable for ppc, wrt bug #495582

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> configobj-4.7.2-r2.ebuild:
  amd64 stable, bug #495582

*configobj-5.0.1 (25 Feb 2014)

  25 Feb 2014; Tim Harder <radhermit@gentoo.org> +configobj-5.0.1.ebuild:
  Version bump.

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  configobj-4.7.2-r2.ebuild:
  x86 stable wrt bug #495582

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> configobj-4.7.2-r1.ebuild,
  configobj-4.7.2-r2.ebuild: