@@ -7,18 +7,24 @@ DIST configobj-5.0.1.tar.gz 32840 SHA256 ae0200a5707b2a63f2ed4ffbe211d603b36bb8a
 DIST configobj-5.0.2.tar.gz 32973 SHA256 13c062852322079ecfcab030ef384ade0da9cbe8578fc84afbcfdbe036c58773 SHA512 09ea988babc8bc8c6d3cdc66679f1d953bfd262704712d2dbce920008f06c00cfcd42456a439b66e8ae678d8f25102b72c1c86daa34b04413fe24888c5f166ce WHIRLPOOL 9b8d33b0ef151a412ee8f09228aee0a22c428001d7870398563ea9a46d4f3579581529c625d8f98e25857ab45e0bd62d298be9782e498c4d85608e727a37b0e2
 DIST configobj-5.0.3.tar.gz 33155 SHA256 c15b45de09207fcd3bbaeaa3b81267d7e1ee66a43e97e89a628e4d43de0e9598 SHA512 d1bc208d18ed3a9679bc61895c05afc008b43fb01b3071420d53dcb110f7fa8b89e84a8e98e29d42a11873aec0c8df2866e1c0606ef83f3de9daac08f8d72335 WHIRLPOOL ce7e26d9634bcea9a3fc9fb1c165101368cdb17666836018df8bf16f2312d41be2b1cebb04363011b8d404fdfd5c7f52c9f58f8b156b73d3e3eb614458d0b53f
 DIST configobj-5.0.4.tar.gz 33205 SHA256 263b85d384356ba220bd8d532a4bf69bdd10b5dd932f9bd9a4e9be1ef4b453e0 SHA512 a64e933ed0f7566fb3e53718b76f1ddc8aa913409f145547ab974c245e0893a5ebd32c3b5d0c2103643e9ccb5f92bc6fcc5430b6318a2d5debc406486ed6dec3 WHIRLPOOL fc8fbb516ee03cceb53dcd6d3fb78a90884d7362836a094ece6c9147cb81c888586feb05de24222901710a3b125839bd9e64e8a9b5e21eb8b3742e837be91454
+DIST configobj-5.0.5.tar.gz 33232 SHA256 766eff273f2cbb007a3ea8aa69429ee9b1553aa96fe282c6ace3769b9ac47b08 SHA512 6dfb30fff22b1a62a191876161c20c7236d49137a0def85ea2ddf80a6810347f586bbec2dffbcd58ed942591f362b7741ec2f9464fb377e852edc6748b12ba6a WHIRLPOOL ff4c202b15188f501f2538db16a518e154a93bffa31c2d89e509220967d6bde51f7dc1e062f3d57895bf024a04554f42cc8d527d89b93ff9a6e1127dadc9d035
 EBUILD configobj-4.7.2-r1.ebuild 1054 SHA256 8df35336e94f7c80bfd232945511ee7507c9752196c0fd8564e030657c80468e SHA512 66d7592b353b07c1fe3857fb06e446ef7dda714adce7d61bfd78a24810bace3635246a2077a5ae30105f542c9deeccbca7b04a6fd8537c1e191c63176672dacb WHIRLPOOL cc6eecc048c2c1e904cbbd10762aeea208b6f2b6cf457d68af9e3f4a26602769ba91ae1a5a08abbd825e1cdb90fbabc3d24ad579de6a4f81a88a2719749b7d22
 EBUILD configobj-4.7.2-r2.ebuild 1126 SHA256 51e8d0cbb9793e56642df740940f70e1be3ce3d4d529497f18ccc1f5a8260e58 SHA512 54cc0a9106e7305769e05a659244119d1c2245456f3486f16a1610319fa0f6a26c12a34d7084e1c5ddb3374b9ac145680ade9e7d8c1c19cdfce431a8b11da057 WHIRLPOOL c0652a3bc5167f5cbc4f78f73ca52100ed05e5e19b23f9471650add7bb429f25c066567f9f814170940803301afcf32d06de5d0afc85e1c85a4aa4979baffc89
 EBUILD configobj-5.0.1.ebuild 806 SHA256 1270236620591f18b6fd596f35384fbb2340806ccd0bef793615027ad07a3e67 SHA512 e10d8807e94441b19e6b591077ba8047ef0cf4f27d1742d0d919ce3b71f76577e3988e4da2a2f316426ddc3bdd6f9fb1d7f460113371aa759997e1b02080f7fe WHIRLPOOL 443a94afc7849c55e9fe1d2ceb7554b2a2a97f136e95e38d7c64ba8aab2163a2c755d4816949d2333b9b86ec422cc29cdec478b63fff8788f5453222b6e60f00
 EBUILD configobj-5.0.2.ebuild 806 SHA256 74d678723eab360247d3dd5d0da30a86dcba375a8c0aec80b9b5459d8091af87 SHA512 d3047b07ac51ad265cac15e1e472e9d2e4a84643cf5f218dff087456385f5c0d33e255fb720bc194605aea7ca72eda49fa09e02ac6e07dd108f6ed60207d807a WHIRLPOOL f7bfb2ac111e6b0cf3d393dba8b4d261c5d7ac97d98f40d6b87e30b28c1d566809b12dd5262e5aea17b0b360ca9392d5d23188afe54d2dc7aa5bc38b64015a8a
 EBUILD configobj-5.0.3.ebuild 799 SHA256 8fca5b79a6f0954caff09a3c4d8923c66cf1a9294ee5ccb370f0decaf5ddb4b9 SHA512 6cfcc813fe535f6712424a142fd1501e4f6b1c7872690337468a71dbd5dfdc6040c403a6307938198b0f03ea782274cb3b6f329e6bbba4ef90a19f4ba2e8d84b WHIRLPOOL edf1f68b94d7646fc5a0f4e67741f7499a6c582d4c4d452afde52920154c1c5e5b9a7d58f9487ad09decb005cb276337ff68145a48888ce5c1c5109b5afd7b6b
 EBUILD configobj-5.0.4.ebuild 1036 SHA256 3f4ed2700b8aeb2e3ffa0ab205db468a3630cde19f97c09382a86d51458a6301 SHA512 260161bb9f882dcdd8b24d4005366f82936c759cebe5cef0858bb69ec7f9594181056937a85c7c6036d7328d2f79bdcf40a2498a3582e242765a8106a9cdf557 WHIRLPOOL 89cc96f086d1093f4e5dee616eddee0aaa081c68e08e48f5e0af969edd741fd6fb840f269381ac0e9e0fe92f1fced0d69b8dacd95fa4994fc12c206df7cf7128
-MISC ChangeLog 6488 SHA256 65c9c7768254e8dbdfd9ba812b624c2e326779df2f31f93644cf44d940ad2e1a SHA512 ffa8d802d09acbba5c90e7197e1fa4b5d565d87732d0fc796cf93305190fa068707236eead1593dd4c8793934fbaf65946e187b63424cbf4187781017608cfd9 WHIRLPOOL d19906879a6ff6f141b7d088161bf2b9f5837feb77d0ebaf78abec79f70545be3bba18986562edb60a4f263e641fa491727208d8d0c35b97c2dc81fc20d7f972
+EBUILD configobj-5.0.5.ebuild 1026 SHA256 258c28184e867278cd43ee3ede52c980f3c77ab523f8359299a5ee14a8a9c6be SHA512 58eb75061ffe65d0f694d2fdbc93f3013104d2b52bb67c0b330a849f62e2b9cb82278b7e66ff2b0817292369b47241f088834e57b92cc26cbbfd7ece70ac67a6 WHIRLPOOL e9e1d25b61540eecd30542f46528adff8bb62789d4a1e12a54599b671ab65e7d28c94ebe9694118488f6fe344c069f9dbca6285d9a79d3ef24109ce8fc70f75a
+MISC ChangeLog 6613 SHA256 305b8cfbe58cd7381c511a507d9177b1b529a86497ba2c4982a30ad395fa5091 SHA512 413633ad67b66304bc7574092fd1e2a8d6269a939c09780ef6f9786feeb47ee2a3efecdb46466e09a7edcc1d491ad89281fe639e5dd7a0f309448c12ca80e81c WHIRLPOOL e6b60b3d12d19d88a71a21b775e03a1681c516a4bc98b7cfa9ff5c357a96a83dcbb6121c2a4a9f6c9404179628f7f0bfc0574a3fcc72c38aba38f4887cf2c145
 MISC metadata.xml 444 SHA256 58bb271970c8ce0fba8f1fd76345c313ae3af5beaf1345852db23e1eb0b5aca8 SHA512 8dadff4050f969e5791d9e025b9e232869ca810368513b2001e3d8f70afb601f036dd7cc99dcccd5cffc28c3aae2628167829b1e686e558907d8df39efc5820f WHIRLPOOL bf282d0eb17f6a7047e66b71e88a101bb7b1af1b415c04a603e6e6545fee1f47668ada06d04a5041129e594156b4a039fefb9a13dcdeb15576d700a43cabb1f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNXeioACgkQso7CE7gHKw3rYgCaA37IL7yLAXwYXXKPX23qnq+w
-W/MAn1618ULAIIBIi9WCpkiCgTi19ztO
-=eA2X
+iQEcBAEBCAAGBQJTcHHAAAoJEEqz6FtPBkyjzrYIALhKeJXLUzMla8m8aQnPLpqD
+Py8MoV0qp8ilYNHyAaXRz5uMBxwfp+lFKCCpewTQFYZylH8YkH4kzApCBnD6uw7J
+ypYacwC2bKzA6bE8PInwH+WzCk9w2OOjBMo8gc6wsBVp5dKBExCAS5DWhq1aLHF2
+XLzGaTv/C9cTK4N2WxKSJeGF+nhIqbfOnLxNhh6LP2sd82mI317+JuUuAyivgij9
+VRkG7W+aHR9lcNcVVqr7Ztk1fSpN2HQof+7WQ18NTprSsPYAveZWUyOo/F1LaXHa
+58xKbMe4bDFO/hTDNXoRHxbm34fWVWZYx6AVtcZmvAPRXPRedZ7Ow0o4sS+bfi4=
+=rzGp
 -----END PGP SIGNATURE-----
