@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/configobj
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.50 2014/04/23 08:37:56 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.51 2014/05/12 07:01:01 radhermit Exp $
+
+*configobj-5.0.5 (12 May 2014)
+
+  12 May 2014; Tim Harder <radhermit@gentoo.org> +configobj-5.0.5.ebuild:
+  Version bump.
 
   23 Apr 2014; Ian Delaney <idella4@gentoo.org> configobj-5.0.4.ebuild:
   deal with un-needed _version.py reported by Arfrever
